<resources>
    <string name="app_name">Uber</string>
    <string name="action_settings">Settings</string>
    <string name="view_request_action_settings">Log out</string>

    <string name="uberLogoDescription">Uber Logo</string>
    <string name="riderSwitchSelect">Rider</string>
    <string name="userTypeSwitch">Switch</string>
    <string name="driverSwitchSelect">Driver</string>
    <string name="getStartedButton">Get Started</string>
    <string name="switchOffText">Rider</string>
    <string name="switchOnText">Driver</string>
    <string name="title_activity_rider">Map</string>
    <string name="callUberButton">Call An Uber</string>
    <string name="title_activity_view_request">ViewRequestActivity</string>
    <string name="riderLogOutButton">Log out</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="acceptRequestButton">Accept Request</string>


</resources>
